--- a/r4babs2/week-2/workshop.qmd
+++ b/r4babs2/week-2/workshop.qmd
@@ -485,7 +485,7 @@ gel_bottom <- 990
 pos_patB <- 394
 ```
 
-::: {fig-gel}
+::: {#fig-gel}
 ```{r}
 #| echo: false
 #| message: false
@@ -772,7 +772,7 @@ dist_to_patB <- 394 + gel_top
 ```
 
 The (*x*,*y*) position of shPatB is now stored in an R object called
-\`pos_patB.
+`pos_patB`.
 
 The distance between the shPatB band and the top of the gel will be the
 *y*0value in `dist_to_patB` minus the distance to the top of the gel.
