--- a/pgt52m/week-10/workshop.qmd
+++ b/pgt52m/week-10/workshop.qmd
@@ -22,11 +22,10 @@ width="800"}
 This week we will be looking at the assessment for this module and
 introducing you to a specimen sample of the assessment so that you can
 familiarise yourself with the format and what we are expecting you to
-produce. We will be looking at a Rproject containing a quarto markdown
-file and a report results section. We will also look at the marking
-criteria. This material can also be found on the VLE under the module
-assessment marking criteria section. Next week we will cover how to
-reproduce a quarto markdown file yourself in more detail.
+produce.  We will also look at the markingcriteria. This material can
+also be found on the VLE under the module assessment marking criteria 
+section. Next week we will cover how to reproduce a quarto markdown 
+file yourself in more detail.
 
 ## Philosophy
 
@@ -70,28 +69,22 @@ During this module, you should have learnt in the first eight weeks how
 to create and plot data and understand the appropriate statistical tests
 that can be used to analyse biological data. For the assessment, you
 will be provided with a messy data set with which to address key
-questions, and will submit a reproducible analysis in quarto markdown
-format. In this week we are introducing the format of the assessment and
+questions,submit an R script and sufficient text within the R script
+which can we used to generate reproducible analysis and interpret the
+results. In this week we are introducing the format of the assessment and
 giving you an example assessment and we will look at the marking
-criteria. In the following workshop we will be looking at how to do
-reproducible reporting using quarto which you will need for your
-assessment. You will have a further opportunity to ask questions about
-the assessment during the final week workshop which is a drop-in
-session.
+criteria.  The assessment will be discussed in greater detail in week 10
+and you will have a further opportunity to ask questions about the 
+assessment during the final week workshop which is a drop-in session. 
 
 The assessment will be released on the VLE, and the assessment section
 of this module on the VLE will contain the release and submission
 deadlines. You will be required to come up with a hypothesis to test on
 the dataset given and submit a zipped Rproject folder containing an
-annotated quarto markdown file with R code embedded that reads in data,
-reformats or reshapes it as required, calculates statistics, and draws
-the figures. This markdown section should contain the code used to
-perform this analysis, and it should also contain a results section
-which will refer to the Figures generated with appropriate captions
-(figure legends), tables (where appropriate), and a text that will
-connect the figures and tables/statistical results together. This zipped
-folder should also contain a html file rendered from your quarto
-markdown file.
+annotated  R script that reads in data,reformats or reshapes it as 
+required, calculates statistics, and draws the figures. This script 
+should also contain comments which can be used to underneath the code
+and interpret the results of the analysis.
 
 There should be sufficient annotation for a reader to follow the steps
 in the R code. The datasets will be made available to you on the VLE
@@ -101,11 +94,11 @@ available to you on the VLE under Module Assessment.
 # Specimen assessment
 
 ![](images/do_on_your_computer.png) Here is a specimen
-Rproject:[Specimen.Rproj](data-raw/assessment.zip)
+Rproject
 
 ![](images/do_on_your_computer.png) You will need to first unzip this
 project so you can see the contents, this should contain the folders
-figures, data_raw, figures and a .qmd file.
+figures, data_raw, figures and a Rscript file.
 
 # Assessment criteria
 
