--- a/pgt52m/week-10/workshop.qmd
+++ b/pgt52m/week-10/workshop.qmd
@@ -24,8 +24,7 @@ introducing you to a specimen sample of the assessment so that you can
 familiarise yourself with the format and what we are expecting you to
 produce.  We will also look at the markingcriteria. This material can
 also be found on the VLE under the module assessment marking criteria 
-section. Next week we will cover how to reproduce a quarto markdown 
-file yourself in more detail.
+section. 
 
 ## Philosophy
 
